AlarmManager ve AppDelegate'de alarm tetikleme bilgilerini yöneten yeni yapılar eklendi. Alarm tetikleme bilgileri için yeni bir struct oluşturuldu ve uygulama durumunu izlemek için güncellemeler yapıldı. Kullanıcı arayüzünde toplam uyku saatinin hesaplanması ve gösterilmesi için gerekli değişiklikler yapıldı. Ayrıca, yerelleştirme dosyalarına yeni ifadeler eklendi ve gereksiz debug bilgileri kaldırıldı.

--- a/polynap/Resources/Localizations/MainScreen.xcstrings
+++ b/polynap/Resources/Localizations/MainScreen.xcstrings
@@ -2264,6 +2264,40 @@
         }
       }
     },
+    "scheduleSelection.premium.tapToUpgrade" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tap to upgrade"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Dokunarak yükseltin"
+          }
+        }
+      }
+    },
+    "scheduleSelection.premium.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Premium"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Premium"
+          }
+        }
+      }
+    },
     "scheduleSelection.premiumAlert.title" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -2345,6 +2379,40 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Premium Programlar"
+          }
+        }
+      }
+    },
+    "mainScreen.awakeTime" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Awake Time"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uyanık Zamanı"
+          }
+        }
+      }
+    },
+    "mainScreen.sleepTime" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sleep Time"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uyku Zamanı"
           }
         }
       }
